--- a/css/style.css
+++ b/css/style.css
@@ -55,5 +55,11 @@ ul {
     background-color: #e4e8ed ;
 }
 .jumbo-card i {
-    color: #01d7f5 ;
+    color: #1a5eca ;
+}
+.col-md-8 img {
+    width: 100%;
+}
+#read-more {
+    background-image: url('img/Untitled-1-1-1-1-1.png');
 }
