--- a/css/style.css
+++ b/css/style.css
@@ -61,5 +61,5 @@ ul {
     width: 100%;
 }
 #read-more {
-    background-image: url('img/Untitled-1-1-1-1-1.png');
+    background-image: url("./img/Untitled-1-1-1-1-1.png");
 }
