--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,16 @@ ul {
     /* height: 100px; */
     background: #4bd7a8;
 }
+#call-to-action {
+
+}
+#testimonial {
+    height: 700px;
+    background-image: url("../img/brooke-cagle-224821-unsplash-1-1920x700.jpg");
+    background-position: right;
+}
+.box {
+    width: 100%;
+    height: 500px;
+    background: #fff;
+}
