--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,20 @@ ul {
     padding: 10px;
     width: 100% ;
 }
-
+/*  Sezione recent courses */
 #recent-courses {
     padding: 50px;
 }
+.card-footer {
+    border: none;
+    background: transparent;
+
+}
+.card hr {
+    width: 80%;
+    margin: 10px auto ;
+}
+/* /Sezione recent courses */
 #we-proud {
     padding-top: 30px;
     height: 433px;
