--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,9 @@ body {
 /* Sezione "WE ARE PROUD" */
 #we-proud {
     padding-top: 30px;
-    height: 433px;
+    height: 500px;
+    background-repeat: no-repeat;
+    background-position: bottom;
     background-color: #e4e8ed;
     background-image: url('../img/we_proud.png');
 }
@@ -186,6 +188,7 @@ body {
 }
 #we-proud ul {
     display: inline-block;
+    background-position: right;
     width: 100% ;
     height: 100%;
     text-align: center;
@@ -193,11 +196,16 @@ body {
 #we-proud li {
     display: inline-block;
     padding: 30px;
-
 }
+
 #we-proud li p {
     font-size: 3em;
     font-weight: bold;
+}
+#we-proud li small {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #2d2e34 ;
 }
 #newsletter {
     padding: 25px;
